--- a/css/style.css
+++ b/css/style.css
@@ -155,13 +155,13 @@ li:hover {
 }
 
 .banner-1 {
-    background-image: url('https://static.wikia.nocookie.net/marvel_dc/images/2/2b/Robert_Pattinson_Mug_3.jpg/revision/latest?cb=20220228124352');
+    background-image: url('https://hips.hearstapps.com/hmg-prod/images/rev-1-tbm-trl2-88220r-high-res-jpeg-1647272637.jpeg?crop=0.417xw:1.00xh;0.257xw,0&resize=1200:*');
 }
 .banner-2 {
     background-image: url('https://hips.hearstapps.com/hmg-prod/images/rev-1-tbm-trl2-88220r-high-res-jpeg-1647272637.jpeg?crop=0.417xw:1.00xh;0.257xw,0&resize=1200:*');
 }
 .banner-3 {
-    background-image: url('https://static.wikia.nocookie.net/batman/images/3/36/Jim_Gordon_Total_Film_still.webp/revision/latest?cb=20220220041206');
+    background-image: url('https://hips.hearstapps.com/hmg-prod/images/rev-1-tbm-trl2-88220r-high-res-jpeg-1647272637.jpeg?crop=0.417xw:1.00xh;0.257xw,0&resize=1200:*');
 }
 
 
