--- a/css/style3.css
+++ b/css/style3.css
@@ -88,7 +88,7 @@ li:hover {
 
 
 .banner-1 {
-    background-image: url('https://epipoca.com.br/wp-content/uploads/2022/03/the-batman-pattinson-epipoca-1200x675.jpeg');
+    background-image: url('https://static.wikia.nocookie.net/marvel_dc/images/2/2b/Robert_Pattinson_Mug_3.jpg/revision/latest?cb=20220228124352');
 }
 .banner-2 {
     background-image: url('https://images5.alphacoders.com/120/1206049.jpg');
