--- a/css/style2.css
+++ b/css/style2.css
@@ -8,9 +8,10 @@
 
 }
 body {
-    background-image: url(https://images.alphacoders.com/119/1199262.jpg);
-    background-position: 40% 10%;
+    background-image: url('https://www.infobae.com/new-resizer/6XHf8aV1A2bvjCIdnkrjmd7RM0I=/992x661/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/B63BKC6B4JHVRKEUMWJCKUM76E.jpeg');
     background-size: cover;
+    background-repeat: no-repeat;
+     background-position: 40% 10%;
     width: 100%;
     height: 500px;
     position: relative;
