--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ li:hover {
     background-image: url('https://hips.hearstapps.com/hmg-prod/images/rev-1-tbm-trl2-88220r-high-res-jpeg-1647272637.jpeg?crop=0.417xw:1.00xh;0.257xw,0&resize=1200:*');
 }
 .banner-3 {
-    background-image: url('https://static.wikia.nocookie.net/p__/images/4/49/Jim-Gordon_TB.png/revision/latest?cb=20220907213815&path-prefix=protagonist');
+    background-image: url('https://i.pinimg.com/564x/65/1c/c8/651cc8cf1ebac2a83861b4ad9242eaa5.jpg');
 }
 
 
