--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,7 @@
 
 }
 body {
-    background-image: url('https://rare-gallery.com/thumbnail/1376848-catwoman-the-batman-2022-movie-4k-pc-wallpaper.jpg');
+    background-image: url('https://i.imgur.com/e8KEqBb.jpg');
     background-size: cover;
     width: 100%;
     height: 500px;
