--- a/css/style2.css
+++ b/css/style2.css
@@ -8,8 +8,9 @@
 
 }
 body {
-    background-image: url('https://i.imgur.com/e8KEqBb.jpg');
+    background-image: url('https://i0.wp.com/portalrefil.com.br/wp-content/uploads/2022/01/the_batman-009.jpeg?w=1200&ssl=1');
     background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 500px;
     position: relative;
